# dino

./: CMakeLists.txt  README.md  dino2.c  dino2.h  text.c
